[package]
name = "moneo-mqtt"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]
edition = "2021"
description = "Helpers for talking to moneo over mqtt"
license = "MIT OR Apache-2.0"

#repository = "https://github.com/"
#homepage = "https://github.com/"
#documentation = "https://docs.rs/"

readme = "README.md"
resolver = "2"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.12", features = ["chrono"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
getset = "0.1"
uuid = { version = "1.0", features = ["serde"] }
thiserror = "1"
